# doctruth

./: .gitignore  Dockerfile  LICENSE  README.md  agent.yaml  arize_evals_playbook.md  db.py  deploy.sh  forensic_auditor.yaml  main.py  pharma_chemist.yaml  pyproject.toml  run_evals.py  test_otel_protocols.py
agents/: tools.py  tracker.py
public/: index.css  index.html  index.js
